# tinyrenderer

./: CMakeLists.txt  README.md  geometry.hpp  global.hpp  main.cpp  model.cpp  model.hpp  rasterizer.cpp  rasterizer.hpp  tgaimage.cpp
include/: camera.hpp  global.hpp  rasterizer.hpp  scene.hpp  shader.hpp  triangle.hpp
src/: main.cpp  rasterizer.cpp  scene.cpp  shader.cpp  triangle.cpp
